--- a/register/index.html
+++ b/register/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register</title>
     <!-- <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/login.css"> -->
     <link rel="stylesheet" href="../src/output.css">
@@ -32,19 +32,24 @@
     </div>
 </header>
 <main>
-    <div class="max-w-[1600px] mx-auto flex justify-center items-center min-h-content">
-        <div class="w-full flex h-full">
-            <img src="../assets/images/dl.beatsnoop 1.png" alt="" class="max-w-[480px] object-none object-left">
-            <div class="py-55 pl-20">
-                <h2 class="text-5xl mb-5  font-semibold">Log in to Exclusive</h2>
+    <div class="max-w-[1600px] mx-auto flex justify-center items-center ">
+        <div class="w-full flex items-center gap-10 justify-center my-20">
+            <div class="flex-3">
+                <img src="../assets/images/dl.beatsnoop 1.png" alt="" >
+            </div>
+            <div class="flex-2">
+                <h2 class="text-5xl mb-5  font-semibold">Create an account</h2>
                 <p class="mb-10 font-semibold">Enter your details below</p>
 
                 <form action="" class="flex flex-col gap-5">
-                    <input type="text" placeholder="Email or Phone Number" class="outline-none border-b-1 border-gray-300 pt-4 pb-2 w-full" />
-                    <input type="password" placeholder="Password" class="outline-none border-b-1 border-gray-300 pt-4 pb-2 w-full" />
-                    <div class="flex justify-between items-center mt-5 mb-10">
-                    <button class="bg-red-500 py-3 px-6 text-white text-lg">Log In</button> <a href="http://" class="text-red-500">Forget Password?</a>    
-                    </div>
+                    <input type="text" placeholder="Name" class="outline-none border-b-1 border-gray-300 text-lg pt-4 pb-2 w-full" />
+                    <input type="text" placeholder="Email or Phone Number" class="outline-none border-b-1 border-gray-300 text-lg pt-4 pb-2 w-full" />
+                    <input type="password" placeholder="Password" class="outline-none border-b-1 border-gray-300 text-lg pt-4 pb-2 w-full" />
+                    <button class="bg-red-500 py-3 px-6 text-white text-lg w-full">Create Account</button> 
+                    <button class=" py-3 px-6 text-black text-lg w-full border-1">Sign up with Google</button> 
+
+                    <p class="text-gray-300 text-center text-lg">Already have account? <a href="../login" class="ml-2 text-black hover:underline">Log In</a>    </p>
+                    
                 </form>
             </div>
         </div>
