--- a/carts/index.html
+++ b/carts/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <!-- <link rel="stylesheet" href="../styles/reset.css">
-    <link rel="stylesheet" href="../styles/login.css"> -->
     <link rel="stylesheet" href="../src/output.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -21,97 +19,94 @@
 
         .scrollbar-hide {
             -ms-overflow-style: none;
-            /* IE and Edge */
             scrollbar-width: none;
-            /* Firefox */
         }
     </style>
 </head>
 
 <body>
 
-    <header class="border-b-1 border-gray-300 bg-white ">
-        <div class="max-w-[1440px] mx-auto flex justify-between items-center py-6 ">
-            <h1 class="text-3xl font-bold">Webmaster E-commerce</h1>
-            <nav class="flex-1 ">
-                <ul class="nav-links flex justify-between gap-4 max-w-[24rem] mx-auto">
-                    <li><a href="../index.html" class="text-xl border-b-3 border-gray-400">Home</a></li>
-                    <li><a href="../contact.html" class="text-xl hover:underline">Contact</a></li>
-                    <li><a href="../about" class="text-xl hover:underline">About</a></li>
-                    <li><a href="../register" class="text-xl hover:underline">Sign Up</a></li>
+    <header>
+        <div>
+            <h1>Webmaster E-commerce</h1>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
+                    <li><a href="../about">About</a></li>
+                    <li><a href="../register">Sign Up</a></li>
                 </ul>
             </nav>
 
-            <div class="flex gap-5 items-center">
-                <input type="text" placeholder="What are you Looking For" id="input-search"
-                    class="w-full p-2 bg-[#f5f5f5]  focus:outline-none focus:ring-2 focus:ring-gray-500" />
-                <a href=""><i class="bi bi-heart  text-2xl"></i></a>
-                <a href=""> <i class="bi bi-cart3  text-2xl"></i></a>
-                <a href=""><i class="bi bi-person text-2xl"></i></a>
+            <div>
+                <input type="text" placeholder="What are you Looking For" id="input-search" />
+                <a href=""><i class="bi bi-heart"></i></a>
+                <a href=""> <i class="bi bi-cart3"></i></a>
+                <a href=""><i class="bi bi-person"></i></a>
             </div>
 
         </div>
     </header>
     <main>
-        <div class="max-w-[1440px] mx-auto flex justify-center items-center flex-col">
-            <div class="breadcrumbs flex gap-2 w-full justify-start my-16">
+        <div>
+            <div>
                 <p>Cart</p>
             </div>
 
-            <section class="carts w-full">
-                <table class="w-full">
+            <section>
+                <table>
                     <thead>
-                        <tr class="border-b-1 border-gray-200 text-lg  h-16">
-                            <th class="text-left">Product</th>
-                            <th class="text-left">Price</th>
-                            <th class="text-left">Quantity</th>
-                            <th class="text-left">Sub Total</th>
+                        <tr>
+                            <th>Product</th>
+                            <th>Price</th>
+                            <th>Quantity</th>
+                            <th>Sub Total</th>
                         </tr>
                     </thead>
 
-                    <tr class="border-b-1 border-gray-200 h-24 align-middle">
-                        <td class="flex h-full gap-4 items-center">
-                            <img src="../assets/images/big-product-image.png" alt="product" class="h-24 aspect-square object-contain">
-                            <p class="text-lg">Product Name</p>
+                    <tr>
+                        <td>
+                            <img src="../assets/images/big-product-image.png" alt="product">
+                            <p>Product Name</p>
                         </td>
                         <td>$100</td>
                         <td>
-                            <input type="number" value="1" min="1" class="w-16 h-10 text-center  border-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-gray-500">
+                            <input type="number" value="1" min="1">
                         </td>
                         <td>$100</td>
                     </tr>
-                    <tr class="border-b-1 border-gray-200 h-24 align-middle">
-                        <td class="flex h-full gap-4 items-center">
-                            <img src="../assets/images/big-product-image.png" alt="product" class="h-24 aspect-square object-contain">
-                            <p class="text-lg">Product Name</p>
+                    <tr>
+                        <td>
+                            <img src="../assets/images/big-product-image.png" alt="product">
+                            <p>Product Name</p>
                         </td>
                         <td>$100</td>
                         <td>
-                            <input type="number" value="1" min="1" class="w-16 h-10 text-center  border-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-gray-500">
+                            <input type="number" value="1" min="1">
                         </td>
                         <td>$100</td>
                     </tr>
                 </table>
             </section>
-            <section class="cart-total flex justify-end w-full mt-10">
-                    <div class="border-2 p-6 w-1/3">
-                        <h3 class="font-semibold text-xl mb-2">Cart Total</h3>
-                        <table>
-                            <tr class="h-12 border-b-1 border-gray-200">
-                                <th class="text-left font-medium w-full">Subtotal</th>
-                                <td>$200</td>
-                            </tr>
-                            <tr class="h-12 border-b-1 border-gray-200">
-                                <th class="text-left font-medium w-full">Shipping</th>
-                                <td>$10</td>
-                            </tr>
-                            <tr class="h-12  border-gray-200">
-                                <th class="text-left font-medium w-full">Total</th>
-                                <td>$210</td>
-                            </tr>
-                        </table>
+            <section>
+                <div>
+                    <h3>Cart Total</h3>
+                    <table>
+                        <tr>
+                            <th>Subtotal</th>
+                            <td>$200</td>
+                        </tr>
+                        <tr>
+                            <th>Shipping</th>
+                            <td>$10</td>
+                        </tr>
+                        <tr>
+                            <th>Total</th>
+                            <td>$210</td>
+                        </tr>
+                    </table>
 
-                        <button class="bg-red-700 px-8 py-2 text-white rounded text-center">Process to checkout</button>
+                    <button>Process to checkout</button>
                 </div>
 
             </section>
